new_tests/semantics/scope/bad/027_CLASSTEMPLATE_1.cm
/*
    Scope Error 307

    1| class A<S>
    Class 'A' can not be redeclared since it was declared earlier.

    Redeclaration was found.
    1| class A<T>
*/

class A<T> {}
class A<S> {}
